// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render component with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $ 2.35
  </h1>
</div>
`;

exports[`should render component with multiple expense 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $ 2,412.34
  </h1>
</div>
`;

exports[`should render component with no data 1`] = `
<div>
  <h1>
    Viewing 
     
    expenses
     totalling 
    $ 0.00
  </h1>
</div>
`;
